V 01.00.03 IMG>contain for being more responsive

--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ section {
 }
 
 .recip-card .image-container img {
-  object-fit: cover;
+  object-fit: contain;
   height: 100%;
   width: 100%;
 }
